<?xml version="1.0"?>
<package>
  <name>wam_node</name>
  <version>0.0.0</version>
  <description>The wam_node package</description>

  <maintainer email="cam@todo.todo">Camilo Buscaron</maintainer>
  <license>TODO</license>
  <author email="benblumer@todo.todo">Ben Blumer </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>wam_common</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>wam_common</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
